All the Pages are completed with the required contents and now only adding media query is left.

--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Blog</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -58,14 +59,14 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
             <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Last Upadated on Mar 12, 2020 : 19 min read .    
                 <span class="link-categories">
-                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="https://github.com/Abenezer-Fekadu/Personal-Website.git" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
@@ -79,7 +80,7 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Have a Slice:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Have a Slice:</a> </h4>
             <p>Every one should have their meals three times a day, to maintain their health and to increase stamina.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
@@ -97,7 +98,7 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html">Web Design and Development:</a></h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html">Web Design and Development:</a></h4>
             <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
@@ -115,14 +116,14 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Be friends With Books</a></h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Be friends With Books</a></h4>
             <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Last Upadated on Jan 29, 2020  5:20: 7 min read .    
                 <span class="link-categories">
-                    <i class="fas fa-folder mx-2 mx-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                    <i class="fas fa-folder mx-2 mx-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="https://github.com/Abenezer-Fekadu/Personal-Website.git" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
@@ -136,14 +137,14 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html">Food Is Necessary:</a></h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html">Food Is Necessary:</a></h4>
             <p>Try to enjoy as many meals as you can, by traveling all around the world. in addition learn more tradition by knowing the world.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Last Upadated on Feb 5, 2020 11:56  25 min read .    
                 <span class="link-categories ms-0">
-                    <i class="fas fa-folder mx-2"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                    <i class="fas fa-folder mx-2"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="https://github.com/Abenezer-Fekadu/Personal-Website.git" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
