--- a/blog2.html
+++ b/blog2.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Blog2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -57,14 +58,14 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Reading Is The Essence of Learnig:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Reading Is The Essence of Learnig:</a> </h4>
             <p>Everything begins from self thought, so try to browden your mind by reading different books that are intersting.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Feb 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo    
                 <span class="link-categories ml-3">
-                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>
                 </span>
             </div> 
         </div>
@@ -78,7 +79,7 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Change Through Running:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Change Through Running:</a> </h4>
             <p>Your body moves before you think which a sign youcan do anything, run to achieve and full fill your goal.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
@@ -96,14 +97,14 @@
     </div>
     <div class="row justify-content-center">
         <div class=" blog col-9 col-lg-7 mb-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Be friends With Books</a></h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Be friends With Books</a></h4>
             <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Last Upadated on Jan 29, 2020  5:20: 7 min read .    
                 <span class="link-categories ml-3">
-                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                    <i class="fas fa-folder mx-2 ms-0"></i>
                 </span>
             </div> 
         </div>
