--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./About</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -48,7 +49,7 @@
 <!-- The image in about me -->
 <div class="parrallex">
     <div class="about-container">
-        <span class="text-about">
+        <span class="text-about title-text">
         About me
         </span>
     </div>
@@ -86,7 +87,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-12 col-lg-9">
             <div class="text-container mt-sm-5 mb-sm-3">
-                <h2>Some Things About My Family</h2>
+                <h2 class="title-text">Some Things About My Family</h2>
                 <p>As I mentioned earlier my mother name is Azalech Ababa and she is a language teacher (specifically Amharic language). She has been teaching about 30 years now, so she is my roll model. As for father, his name is Fekadu Tefera and he is health officier, so most of the time he spent his time working in rural areas. Therefor we don't have family time more rapidly. But you should also have to know that I have a twin brother whose name is Natnael Fekadu. Since his age is the same as my age, me my brother are currently learning in Addis Ababa Universiy and he is studying medicine in order to be a doctor. As a whole I didn't have a sister, but I have many cousins that are like sisters to me. Finally I just want to say that my family are the parents that any kid could ever wish for. I Love My Family.</p>
                 <p>You can follow my current work in AAIT on GitHub. Thank you so much for reading.</p><br>
             </div>
@@ -96,7 +97,7 @@
 <!-- The image in about me -->
 <div class="parrallex">
     <div class="about-container">
-        <span class="text-about">
+        <span class="text-about title-text">
         Get in touch
         </span>
     </div>
@@ -106,7 +107,7 @@
 <div class="container-fluid mt-sm-3" id="form">
     <div class="row justify-content-center">
         <div class="col-12 col-md-12 col-lg-3" >
-            <h3 class="welcome">Hi there!</h3>
+            <h3 class="welcome title-text">Hi there!</h3>
             <p class="welcome-text">This form is for contacting me about speaking engagements, opportunities to work together, or mentorship requests. This is NOT a form for requesting help.</p>
         </div>
         <div class="col-12 col-md-12 col-lg-6">
@@ -121,7 +122,7 @@
                         <textarea  class="form-control" name="" id="" rows="7" placeholder="Message"></textarea>
                     </div>
                     <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                        <i class="fas fa-play-circle mr-1"></i> send
+                        send
                     </a>                
                 </form>
         </div>
