--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Home</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
-
+    
 <body>
 <!-- This is the header navigation bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
@@ -51,18 +52,18 @@
         <div class="rev row justify-content-center">
             <div class="col-lg-3 col-12">
                 <div class="profile-img text-center">
-                    <img src="./assets/images/bro2.jpg" alt="" id="profile-picture">
+                    <img src="./assets/images/bro2.jpg" alt="profile image" id="profile-picture">
                         <div class="profile-body">
                         <h2 class="profile-title">Abenezer Fekadu</h2>
                         <p class="profile-text text-muted">Software Engineering Student, Addis Ababa University</p>
                         <p class="profile-link"> <a class="text-decoration-none" href="" target="_blank">ITSC</a></p>
                         <div class="medias">
-                            <a class="text-decoration-none" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="text-decoration-none" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
                             <a class="text-decoration-none" href="https://twitter.com/login?lang=en"><i class="fab fa-twitter big-icon"></i></a>
                             <a class="text-decoration-none" href="https://github.com/Abenezer-Fekadu/First-Html-Practice.git"><i class="fab fa-github big-icon"></i></a>
-                            <a class="text-decoration-none" href="https://www.gmail.com/"><i class="fab fa-gmail-f"></i></a>
-                            <a class="text-decoration-none" href="https://www.youtube.com/"><i class="fab-fa-youtube-f"></i></a>
-                            <a class="text-decoration-none" href="https://www.instagram.com/"><i class="fab-fa-instagram-f"></i></a>
+                            <a class="text-decoration-none" href="https://www.gmail.com/"><i class="fas fa-envelope-square"></i></a>
+                            <a class="text-decoration-none" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                            <a class="text-decoration-none" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                         <div class="row my">
                             <div class="col-12 col-md-5">
                                 <div class="interest">
-                                    <h2 class="interst-title">Interest</h2>
+                                    <h2 class="interest-title">Interest</h2>
                                     <ul>
                                         <li>Artificial Intelligence</li>
                                         <li>Web Development</li>
@@ -100,11 +101,11 @@
                                 <div class="education">
                                     <h2>Education</h2>
                                     <div>
-                                        <p> <i class="fa fas fa-graduation-cap mx-1"></i> <span>Second Year AAIT Student, 2018</span></p>
+                                        <p class="topic-text"> <i class="fa fas fa-graduation-cap mx-1"></i> <span>Second Year AAIT Student, 2018</span></p>
                                         <span class="text-muted  mx-2">Addis Ababa unviversity</span>
                                     </div>
                                     <div>
-                                        <p><i class="fa fas fa-graduation-cap mx-1"></i><span>Engineering Undergraduate, 2023</span></p> 
+                                        <p class="topic-text"><i class="fa fas fa-graduation-cap mx-1"></i><span>Engineering Undergraduate, 2023</span></p> 
                                         <span class="text-muted  mx-2">Addis Ababa unviversity</span>
                                     </div>
                                 </div>
@@ -141,7 +142,7 @@
                         Abenezer is an absolutely amazing friend! Really really best one at that. Thank you!”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -152,7 +153,7 @@
                     “Abenezer was great - very knowledgeable, accessible and good sense of humor.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -163,7 +164,7 @@
                         “I really liked the content + Abenezer's is good student.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -174,7 +175,7 @@
                     “Abenezer is a phenomenal person , and his enthusiasm for the learning is palpable.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -185,7 +186,7 @@
                     “Abenezer is an inspiring person with both the charm and character."
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -196,7 +197,7 @@
                     “Abenezer is one of the funniest guy i Meet."
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -207,7 +208,7 @@
                     "Abenezer have good Attitude."
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -218,7 +219,7 @@
                         “I enjoyed learning with Abenezer. Thanks for your enthusiastic way of sharing.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -229,7 +230,7 @@
                     "Abenezer is a Family Guy."
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -240,7 +241,7 @@
                         “I appreciated the dedication he gives for his Work."
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TALKS</a>
                     </p>
                 </div>
             </div>
@@ -251,7 +252,7 @@
                         "Trying to make difficult things understandable and having good energy and enthusiasm for helping.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TASKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TASKS</a>
                     </p>
                 </div>
             </div>
@@ -262,7 +263,7 @@
                         “Alison is fantastic, he is there in time of need.”
                     </p>
                     <p>
-                        <a href="talk.html" class="btn btn-light btn-lg"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TASKS</a>
+                        <a href="talk.html" class="btn btn-light btn-lg pager"><i class="fas fa-spa  mx-2 ms-0"></i>SEE MY TASKS</a>
                     </p>
                 </div>
             </div>
@@ -292,14 +293,14 @@
             <h2 class="blog-title">FROM MY BLOG</h2>
         </div>
         <div class=" blog col-9 col-lg-4 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="blog.html"> Make your body &amp; Mind Strong:</a> </h4>
             <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="time text-muted">Last Upadated on Mar 12, 2020 : 19 min read</div> 
             <span class="link-categories text-muted">
-                <i class="fas fa-folder mx-1 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
+                <i class="fas fa-folder mx-1 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="https://github.com/Abenezer-Fekadu/Personal-Website.git" target="_blank">Github</a>
             </span>
             <div class="see-all">
                 <a class="text-decoration-none" href="blog.html">SEE ALL POSTS<i class="fas fa-angle-right mx-1"></i>
@@ -319,25 +320,25 @@
             <h2 class="task-title">TASKS/WORKSHOPS</h2>
         </div>
         <div class="task col-lg-4 col-9">
-            <h4><a class="text-decoration-none" href="task.html">Introduction to Python UI with Abenezer</a></h4>
+            <h4><a class="text-decoration-none title-text" href="talk.html">Introduction to Python UI with Abenezer</a></h4>
             <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
             <div class="place text-muted">Feb 29, 2020 9:00 AM — 5:00 PM . Addis Ababa, 6 killo</div>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-images mx-1 ms-0"></i>slides
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.learnpick.in/prime/documents/ppts/details/746/introduction-to-python-programming" target="_blank">
+                    <i class="fas fa-images mr-2"></i>slides
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mx-1 ms-0"></i>code
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://developers.google.com/edu/python/introduction" target="_blank">
+                    <i class="fab fa-github mr-1"></i>code
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-play-circle mx-1 ms-0"></i> video
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">
+                    <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
             <div class="see-all">
-                <a class="text-decoration-none" href="blog.html">SEE ALL TALKS<i class="fas fa-angle-right mx-1"></i></a>
+                <a class="text-decoration-none" href="talk.html">SEE ALL TALKS<i class="fas fa-angle-right mx-1"></i></a>
             </div>
         </div>
         <div class="col-lg-2 col-3">
@@ -351,25 +352,24 @@
 </div>
 
 <!-- Footer part with the logos -->
-<div class="container mb-5">
+<div class="container">
     <footer class="website-footer">
         <p class="licensed">
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
-            <div class="text-end">
-                <span class="right-icon" aria-hidden="true">
-                    <a href="#" id="back_to_top">
-                        <span class="up_icon">
-                            <i class="fas fa-chevron-up fa-2x"></i>
-                        </span>
-                    </a>
-                </span>
-            </div>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
         </p>
     </footer>
 </div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
