--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,10 @@
     <title>Abenezer F./Resume</title>
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -54,7 +55,7 @@
 <div class="container-fluid mt-5">
     <div class="row justify-content-center">
         <div class="col-12  col-md-12 col-lg-3">
-            <h2 class="wow">Experience</h2>
+            <h2 class="exp">Experience</h2>
         </div>
         <div class="d-none d-sm-block col-sm-1 col-lg-2">
                     <div class="wrapper">
@@ -80,37 +81,32 @@
         <div class="col-sm-11 col-lg-4 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Web Designer and Developer</h5>
-                    <a href="#" class="card-link">ITSC</a>
+                    <h5 class="card-resume-title">Web Designer and Developer</h5>
+                    <a href="http://www.aait.edu.et/" class="card-link" target="_blank">ITSC</a>
                     <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Mobile App Programer</h5>
-                    <a href="#" class="card-link">AAIT</a>
+                    <h5 class="card-resume-title">Android App Programer In Flutter</h5>
+                    <a href="http://www.aait.edu.et/" class="card-link" target="_blank">AAIT</a>
                     <h6 class="card-subtitle mb-2 text-muted">October 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Software Developer</h5>
-                    <a href="#" class="card-link">AAIT</a>
-                    <h6 class="card-subtitle mb-2 text-muted">October 2018 – Present Addis Ababa</h6>
+                    <h5 class="card-resume-title">Software Developer</h5>
+                    <a href="http://www.aait.edu.et/" class="card-link" target="_blank">AAIT</a>
+                    <h6 class="card-subtitle mb-2 text-muted">October 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Data Base Manager</h5>
-                    <a href="#" class="card-link">ITSC</a>
+                    <h5 class="card-resume-title">Second Year Software Enginnering Student</h5>
+                    <a href="http://www.aait.edu.et/" class="card-link" target="_blank">ITSC</a>
                     <h6 class="card-subtitle mb-2 text-muted">March 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <!-- <div class="exp">
-                <h4>Web Designer and Developer</h4>
-                <p><a href="" target="_blank">ITSC</a></p>
-                <span class="time"> March 2020 – Present Addis Ababa  </span>
-            </div> -->
         </div>
     </div>
 </div>
@@ -125,35 +121,26 @@
 <div class="container-fluid mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-3 col-12">
-                <h2 class="wow">Honers & Awards </h2>
+                <h2 class="exp">Honers & Awards </h2>
         </div>
         <div class="col-lg-6 col-12">
-            <div class="card">
+            <div class="card p-md-4">
                 <div class="card-body">
-                    <h5 class="card-title">Web Designer and Developer</h5>
-                    <a href="#" class="card-link">ITSC</a>
-                    <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
+                    <h5 class="card-resume-title">Distinguished Student in HighSchool for Outstanding Behaviour</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Babile Preparatory School - Feb 2016 </h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card p-md-4">
                 <div class="card-body">
-                    <h5 class="card-title">Mobile App Programer</h5>
-                    <a href="#" class="card-link">AAIT</a>
-                    <h6 class="card-subtitle mb-2 text-muted">October 2019 – Present Addis Ababa</h6>
+                    <h5 class="card-resume-title">Excellence for Participating in Danate Blood to Save Life Servey</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Ethiopian National Blood Bank campaign - April 2017</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card p-md-4">
                 <div class="card-body">
-                    <h5 class="card-title">Software Developer</h5>
-                    <a href="#" class="card-link">AAIT</a>
-                    <h6 class="card-subtitle mb-2 text-muted">October 2016– Present Addis Ababa</h6>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Web Designer and Developer</h5>
-                    <a href="#" class="card-link">ITSC</a>
-                    <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
+                    <h5 class="card-resume-title">Ambassader of Peace</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Addis Ababa University Jan 2019</h6>
+                    <p class="ms-3">A one Semister Educational and Experiment program held by our Instracter</p>
                 </div>
             </div>
         </div>
