--- a/talk.html
+++ b/talk.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Talk</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -49,7 +50,7 @@
 <div class="container blog-text">
     <div class="row">
         <div class="col-12">
-            <h1>All Talks & Workshops</h1>
+            <h1 class="title-text">All Talks & Workshops</h1>
         </div>
     </div>
 </div>
@@ -58,10 +59,10 @@
 <div class="container-fluid">
     <div class="row justify-content-center mb-5">
         <div class="col-12 col-lg-2 ">
-            <h3>Upcomming</h3>
+            <h3 class="title-text">Upcoming</h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Mobile Programing</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Introduction to Mobile Programing</a> </h4>
             <p> two-weaks workshop to introduce the basics of mobile app and UI gesture, which makes mobile programing easy.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
@@ -71,7 +72,7 @@
         </div>
         <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
             <div class="text-end">
-                <a href="blog.html" >
+                <a href="#" >
                     <img id="logo" src="./assets/images/android (1).jpg" alt="">
                 </a>
             </div>
@@ -79,10 +80,10 @@
     </div>
     <div class="row justify-content-center mb-5">
         <div class="col-12 col-lg-2">
-            <h3>Recent</h3>
+            <h3 class="title-text">Recent</h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Introduction to Python UI with Abenezer</a> </h4>
             <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
 
             <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
@@ -90,20 +91,20 @@
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.learnpick.in/prime/documents/ppts/details/746/introduction-to-python-programming" target="_blank">
                     <i class="fas fa-images mr-2"></i>slides
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://developers.google.com/edu/python/introduction" target="_blank">
                     <i class="fab fa-github mr-1"></i>code
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
         </div>
         <div class=" col-3 col-md-5 col-lg-2" id="blog-img-space">
             <div class="text-end">
-                <a href="blog.html" >
+                <a href="#" >
                     <img id="logo" src="./assets/images/python.jpg" alt="">
                 </a>
             </div>
@@ -114,7 +115,7 @@
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Photoshop and Photo Design</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Photoshop and Photo Design</a> </h4>
             <p>Re-design photos and add text effect, color effect and more new features inorder to make your photo intersting.</p>
 
             <div class="time text-muted">Last Upadated on Mar 5, 2020  19 min read</div> 
@@ -122,7 +123,7 @@
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=pFyOznL9UvA" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
@@ -132,7 +133,7 @@
         </div>
         <div class="col-3 col-md-5 col-lg-2 " id="blog-img-space">
             <div class="text-end">
-                <a href="blog.html" >
+                <a href="#" >
                     <img id="logo" src="./assets/images/photoshop.jpg" alt="">
                 </a>
             </div>
