--- a/talk2.html
+++ b/talk2.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Talks2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -30,7 +31,7 @@
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
                 <li class=" line nav-item">
-                    <a class="nav-link" href="talk2.html">TALKS</a>
+                    <a class="nav-link" href="talk.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
                     <a class="nav-link" href="gallery.html">GALLERY</a>
@@ -49,7 +50,7 @@
 <div class="container blog-text">
     <div class="row">
         <div class="col-12">
-            <h1>Tasks & Workshops</h1>
+            <h1 class="title-text">Tasks & Workshops</h1>
         </div>
     </div>
 </div>
@@ -58,10 +59,10 @@
 <div class="container-fluid">
     <div class="row justify-content-center mb-5">
         <div class=" col-12 col-lg-2">
-            <h3>2021</h3>
+            <h3 class="title-text">2021</h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Mobile Programing</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Introduction to Mobile Programing</a> </h4>
             <p> two-weaks workshop to introduce the basics of mobile app and UI gesture, which makes mobile programing easy.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
@@ -79,10 +80,10 @@
     </div>
     <div class="row justify-content-center mb-5">
         <div class="col-12 col-lg-2">
-            <h3>2020</h3>
+            <h3 class="title-text">2020</h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+            <h4><a class="text-decoration-none title-text" href=""> Introduction to Python UI with Abenezer</a> </h4>
             <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
 
             <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
@@ -90,13 +91,13 @@
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-images mr-1"></i>slides
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.learnpick.in/prime/documents/ppts/details/746/introduction-to-python-programming" target="_blank">
+                    <i class="fas fa-images mr-2"></i>slides
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://developers.google.com/edu/python/introduction" target="_blank">
                     <i class="fab fa-github mr-1"></i>code
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
@@ -114,7 +115,7 @@
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Photoshop and Photo Design</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Photoshop and Photo Design</a> </h4>
             <p>Re-design photos and add text effect, color effect and more new features inorder to make your photo intersting.</p>
 
             <div class="time text-muted">Last Upadated on Mar 5, 2020  19 min read</div> 
@@ -122,7 +123,7 @@
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=pFyOznL9UvA" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
@@ -140,7 +141,7 @@
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Web Design and Development:</a> </h4>
+            <h4><a class="text-decoration-none title-text" href="#"> Web Design and Development:</a> </h4>
             <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
 
             <div class="time text-muted">June 10, 2020  3 hours</div> 
@@ -148,10 +149,10 @@
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.w3schools.com/" target="_blank">
                     <i class="fas fa-door-open mr-1"></i> website
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://github.com/Abenezer-Fekadu/Personal-Website.git" target="_blank">
                     <i class="fab fa-github mr-1"></i> materials
                 </a>
             </div>
@@ -169,20 +170,20 @@
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <h4><a class="text-decoration-none title-text" href=""> Object Oriented Programing</a> </h4>
+            <p> one-month workshop to introduce object oriented programing using java.</p>
+            <div class="time text-muted">Last Upadated on Jan 10, 2020 10:00 AM . Addis Ababa</div> 
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.learnpick.in/prime/documents/ppts/details/1400/java" target="_blank">
                     <i class="fas fa-images mr-1"></i>slides
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=byNs2qSZaNQ" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://github.com/openjdk/" target="_blank">
                     <i class="fab fa-github mr-1"></i>materials
                 </a>
             </div>
@@ -190,69 +191,7 @@
         <div class="col-3 col-md-5 col-lg-2 " id="blog-img-space">
             <div class="text-end">
                 <a href="#" >
-                    <img id="logo" src="./assets/images/python.jpg" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mb-5">
-        <div class="col-12 col-lg-2">
-            <h3></h3>
-        </div>
-        <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
-            <span>
-                <a class="text-decoartion-none" href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                        project
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-images mr-1"></i>slides
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i>materials
-                </a>
-            </div>
-        </div>
-        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
-            <div class="text-end">
-                <a href="#" >
-                    <img id="logo" src="./assets/images/python.jpg" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mb-5">
-        <div class="col-12 col-lg-2">
-            <h3></h3>
-        </div>
-        <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
-            <span>
-                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                        project
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-door-open mr-1"></i></i>websites
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i>materials
-                </a>
-            </div>
-        </div>
-        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
-            <div class="text-end">
-                <a href="#" >
-                    <img id="logo" src="./assets/images/python.jpg" alt="">
+                    <img id="logo" src="./assets/images/java.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -260,7 +199,7 @@
 </div>
 <!-- next page -->
 <div class="pagination justify-content-center" id="next-page">
-    <a class="page-link" href="task.html" >«</a><a class="page-link" href="talk3.html" >»</a>
+    <a class="page-link" href="talk.html" >«</a><a class="page-link" href="talk3.html" >»</a>
 </div>
 <!-- Fotter Links -->
 <div class="container">
