--- a/talk3.html
+++ b/talk3.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Talks3</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
+    <link rel="stylesheet" href="./assets/CSS/media.css">
 
 </head>
 <body>
@@ -30,7 +31,7 @@
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
                 <li class=" line nav-item">
-                    <a class="nav-link" href="talk2.html">TALKS</a>
+                    <a class="nav-link" href="talk.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
                     <a class="nav-link" href="gallery.html">GALLERY</a>
@@ -49,53 +50,53 @@
 <div class="container blog-text">
     <div class="row">
         <div class="col-12">
-            <h1>Tasks & Workshops</h1>
+            <h1 class="title-text">Tasks & Workshops</h1>
         </div>
     </div>
 </div>
 
 <!-- UPCOMING Contents on the page -->
-<div class="container">
+<div class="container-fluid">
     <div class="row justify-content-center mb-5">
         <div class="col-12 col-lg-2">
-            <h3>2019</h3>
+            <h3 class="title-text">2019</h3>
         </div>
         <div class="blog col-9  col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Mobile Programing</a> </h4>
-            <p> two-weaks workshop to introduce the basics of mobile app and UI gesture, which makes mobile programing easy.</p>
+            <h4><a class="text-decoration-none title-text" href="#"> Best Sites To watch Entertaining and Educational Movies Free</a> </h4>
+            <p> Even at times, a lot of people find it difficult to arrange cash for subscribing to a website to watch their favorite movies. So as to clear those dilemmas, I have gathered the names of the best free movie streaming website.</p>
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time text-muted">Last Upadated on April 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo    
+            <div class="time text-muted">Last Upadated on April 18, 2019 12:00 PM . Addis Ababa, 5 killo    
             </div> 
         </div>
         <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
             <div class="text-end">
                 <a href="#" >
-                    <img id="logo" src="./assets/images/android (1).jpg" alt="">
+                    <img id="logo" src="./assets/images/Movies.jpg" alt="movie picture">
                 </a>
             </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center mb-5">
+    <div class="row justify-content-center mb-5">
         <div class="col-12 col-lg-2">
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <h4><a class="text-decoration-none title-text" href="#"> Introduction to Blender with Abenezer</a> </h4>
+            <p>Be part of the hundreds of contributors from around the world that make Blender; studios and individual artists, professionals and hobbyists, scientists and students, VFX experts and animators, and so on.</p>
+            <div class="time text-muted">Last Upadated on Dec 20, 2019 11:00 AM . Addis Ababa</div> 
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://docs.blender.org/manual/en/latest/modeling/meshes/editing/edge/edge_slide.html" target="_blank">
                     <i class="fas fa-images mr-1"></i>slides
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://code.blender.org/" target="_blank">
                     <i class="fab fa-github mr-1"></i>code
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/watch?v=TPrnSACiTJ4&t=22s" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
@@ -103,7 +104,7 @@
         <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
             <div class="text-end">
                 <a href="#" >
-                    <img id="logo" src="./assets/images/python.jpg" alt="">
+                    <img id="logo" src="./assets/images/Blender.jpg" alt="blender image">
                 </a>
             </div>
         </div>
@@ -113,14 +114,14 @@
             <h3></h3>
         </div>
         <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Photoshop and Photo Design</a> </h4>
-            <p>Re-design photos and add text effect, color effect and more new features inorder to make your photo intersting.</p>
-            <div class="time text-muted">Last Upadated on Mar 5, 2020  19 min read</div> 
+            <h4><a class="text-decoration-none title-text" href="#">Enjoy Your day By Listening To Musics</a></h4>
+            <p>Music is an art form, and a cultural activity, whose medium is sound. So brighten your day by listening.</p>
+            <div class="time text-muted">Last Upadated on Mar 5, 2019  19 min read</div> 
             <span>
                 <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw" target="_blank">
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
@@ -128,66 +129,7 @@
         <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
             <div class="text-end">
                 <a href="#" >
-                    <img id="logo" src="./assets/images/photoshop.jpg" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mb-5">
-        <div class="col-12 col-lg-2">
-            <h3>2018</h3>
-        </div>
-        <div class="blog col-9 col-md-5 col-lg-5 ">
-            <h4><a class="text-decoration-none" href="blog.html"> Web Design and Development:</a> </h4>
-            <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-            <div class="time text-muted">June 10, 2020  3 hours</div> 
-            <span>
-                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-door-open mr-1"></i> website
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i> materials
-                </a>
-            </div>
-        </div>
-        <div class="col-3  col-md-5 col-lg-2" id="blog-img-space">
-            <div class="text-end">
-                <a href="#" >
-                    <img id="logo" src="./assets/images/web.jpg" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mb-5">
-        <div class="col-12 col-lg-2">
-            <h3></h3>
-        </div>
-        <div class="blog col-9 col-md-7 col-lg-5">
-            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
-            <span>
-                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-images mr-1"></i>slides
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-play-circle mr-1"></i> video
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i>materials
-                </a>
-            </div>
-        </div>
-        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
-            <div class="text-end">
-                <a href="#" >
-                    <img id="logo" src="./assets/images/python.jpg" alt="">
+                    <img id="logo" src="./assets/images/Music.jpg" alt="music picture">
                 </a>
             </div>
         </div>
